@@ -1,7 +1,4 @@
 prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
 
 Name: shared-mime-info
 Description: Freedesktop common MIME database
